# svel-djang

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .worktreeinclude  AGENTS.md  CLAUDE.md  Caddyfile  Dockerfile  Makefile  README.md  pyrightconfig.json
backend/: conftest.py  mypy-baseline.txt  pyproject.toml
backend/.basedpyright/: baseline.json
backend/apps/accounts/: admin.py  api.py  apps.py  backends.py  models.py  signals.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_userprofile_updated_at.py
backend/apps/accounts/tests/: test_models.py  test_user_profile.py  test_workos_auth.py
backend/apps/catalog/: _alias_registry.py  _walks.py  admin.py  apps.py  cache.py  claims.py  models.py  naming.py  resolve.py  signals.py
backend/apps/catalog/api/: __init__.py  _typing.py  corporate_entities.py  edit_claims.py  entity_create.py  entity_crud.py  entity_detail_page.py  franchises.py  gameplay_features.py  helpers.py  images.py  locations.py  locations_write.py  machine_models.py  manufacturers.py  page_endpoints.py  people.py  rich_text.py  schemas.py  series.py  soft_delete.py  systems.py  taxonomy.py  themes.py  titles.py
backend/apps/catalog/fixtures/: golden_records.json
backend/apps/catalog/ingestion/: apply.py  bulk_utils.py  constants.py  fandom_wiki.py  parsers.py  person_lookup.py  pinbase_loader.py  wikidata_sparql.py
backend/apps/catalog/migrations/: 0001_initial.py  0002_add_technology_subgeneration_to_machinemodel.py  0002_alter_machinemodel_options.py  0002_alter_system_manufacturer.py  0004_corporateentitylocation_created_at_and_more.py  0005_location_catalog_location_unique_slug_per_parent_and_more.py  0008_location_corporate_entities.py
backend/apps/catalog/models/: __init__.py  base.py  gameplay_feature.py  location.py  machine_model.py  manufacturer.py  person.py  series.py  system.py  taxonomy.py  theme.py  title.py
backend/apps/catalog/resolve/: __init__.py  _claim_values.py  _dispatch.py  _entities.py  _helpers.py  _media.py  _relationships.py
backend/apps/catalog/services/: __init__.py  location_paths.py
backend/apps/catalog/tests/: conftest.py  test_admin.py  test_api.py  test_api_cache.py  test_api_claims.py  test_api_claims_additional_entities.py  test_api_claims_corporate_entity.py  test_api_claims_gameplay_feature.py  test_api_claims_manufacturer_person.py  test_api_claims_model_relationships.py  test_api_claims_theme.py  test_api_claims_title.py  test_api_corporate_entity_create.py  test_api_corporate_entity_delete.py  test_api_credit_roles.py  test_api_edit_history.py  test_api_locations.py  test_api_locations_write.py  test_api_manufacturer_create.py  test_api_manufacturer_delete.py  test_api_manufacturers.py  test_api_model_create.py  test_api_model_delete.py  test_api_models.py  test_api_people.py  test_api_person_create.py  test_api_person_delete.py  test_api_schema_boundaries.py  test_api_system_create.py  test_api_system_delete.py  test_api_taxonomy_counts.py  test_api_taxonomy_crud.py  test_api_title_create.py  test_api_title_delete.py  test_api_titles.py  test_apply.py  test_bulk_assert_claims.py  test_claims.py  test_db_constraints.py  test_description_html.py  (+36 more)
backend/apps/citation/: admin.py  api.py  apps.py  extraction.py  extractors.py  models.py  safe_fetch.py  seeding.py  url_extraction.py
backend/apps/citation/migrations/: 0001_initial.py  0002_citationsource_identifier_key.py  0003_citationsource_citation_citationsource_identifier_key_valid.py  0004_alter_citationsource_identifier_key.py
backend/apps/citation/seed_data/: __init__.py  books.py  magazines.py  websites.py
backend/apps/citation/tests/: conftest.py  test_admin.py  test_api.py  test_db_constraints.py  test_extraction.py  test_models.py  test_safe_fetch.py  test_seeding.py  test_url_extraction.py
backend/apps/core/: admin.py  api.py  api_helpers.py  apps.py  checks.py  entity_types.py  licensing.py  markdown.py  markdown_links.py  models.py  pagination.py  schemas.py  validators.py
backend/apps/core/markdown/: __init__.py  field.py  references.py  render.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/core/tests/: test_hello_api.py  test_link_types_api.py  test_linkability_contract.py  test_linkable_public_id.py  test_markdown.py  test_markdown_links.py  test_openapi_boundaries.py  test_validators.py  test_wikilinks.py
backend/apps/core/wikilinks/: __init__.py  base.py  picker.py  types.py
backend/apps/media/: admin.py  api.py  apps.py  constants.py  helpers.py  models.py  processing.py  schemas.py  storage.py
backend/apps/media/migrations/: 0001_initial.py
backend/apps/media/models/: __init__.py  asset.py  base.py  entity.py  rendition.py
backend/apps/media/tests/: test_api_response.py  test_db_constraints.py  test_detach.py  test_helpers.py  test_media_claims.py  test_model_validation.py  test_processing.py  test_prod_media_serving.py  test_set_primary.py  test_storage.py  test_upload_api.py
backend/apps/provenance/: admin.py  api.py  apps.py  constants.py  entity_resolution.py  evidence.py  helpers.py  history.py  licensing.py  models.py  page_endpoints.py  pagination.py  rate_limits.py  revert.py  schemas.py  test_factories.py  typing.py  validation.py
backend/apps/provenance/migrations/: 0001_initial.py  0002_add_recent_changes_indexes.py  0002_changeset_action.py  0003_citationinstance.py
backend/apps/provenance/models/: __init__.py  base.py  changeset.py  citation_instance.py  claim.py  source.py
backend/apps/provenance/tests/: test_api_citation_instances.py  test_api_edit_history.py  test_api_evidence.py  test_changes.py  test_changeset.py  test_citation_instance.py  test_claim_factory.py  test_claim_license_write.py  test_ingest_run.py  test_rate_limits.py  test_recent_changes.py  test_revert.py  test_undo_changeset.py  test_validation.py
backend/config/: admin_views.py  api.py  settings.py  urls.py
backend/scripts/codemod/: rename_schemas.py
backend/tests/: test_constraint_drift.py  test_frontend_spa.py  test_router_registration.py
(+16412 files in other folders)
