[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "django>=5.1",
    "django-ninja>=1.3",
    "dj-database-url>=2.3",
    "gunicorn>=23.0",
    "psycopg[binary]>=3.2",
    "whitenoise>=6.8",
    "django-constance>=4.0",
    "markdown-it-py[linkify]>=3.0",
    "nh3>=0.2",
    "Pillow>=11.0",
    "pillow-heif>=1.2",
    "django-storages[s3]>=1.14",
    "workos>=5.0",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.12",
    "pytest>=8.3",
    "pytest-django>=4.9",
    "requests>=2.32",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py314"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*/migrations/*",
    "media",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Mirrors flipfix (~/dev/flipfix) so both Django projects share a linting surface.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DJ",  # flake8-django
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
]
ignore = [
    "E501",  # Line too long — handled by formatter
    "DJ001", # Avoid nullable CharField — common Django pattern
    "S101",  # Use of assert — okay in tests (also per-file-ignored below)
    "S311",  # Use of random — not cryptographic in this app

    # The rules below are temporarily silenced to land the initial sweep as a
    # mechanical-only change. Each represents a real issue (correctness,
    # security, or style) and should be re-enabled and fixed in follow-up PRs,
    # one rule at a time. Do not add to this list without a follow-up.
    "B905",  # zip() without explicit strict=
    "N806",  # Variable in function should be lowercase
    "S104",  # Possible binding to all interfaces
    "S108",  # Probable hardcoded tmp dir
    "S310",  # urlopen without allowed-scheme audit
    "S608",  # Possible SQL injection via string concat
]

[tool.ruff.lint.per-file-ignores]
"*/tests/*.py" = ["S101", "S106", "S603", "S607"]  # asserts, hardcoded test passwords, subprocess in tests
"conftest.py" = ["S101"]
"manage.py" = ["T20"]
"apps/*/management/commands/*.py" = ["T20", "S603", "S607", "B904"]  # print, subprocess, raise-from in commands
"scripts/*.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
