[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "django>=5.1",
    "django-ninja>=1.3",
    "dj-database-url>=2.3",
    "gunicorn>=23.0",
    "psycopg[binary]>=3.2",
    "whitenoise>=6.8",
    "django-constance>=4.0",
    "markdown-it-py[linkify]>=3.0",
    "nh3>=0.2",
    "Pillow>=11.0",
    "pillow-heif>=1.2",
    "django-storages[s3]>=1.14",
    "workos>=5.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "beautifulsoup4>=4.12",
    "django-types>=0.23.0",
    "pytest>=9.0.3",
    "pytest-django>=4.9",
    "requests>=2.32",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py314"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*/migrations/*",
    "media",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Mirrors flipfix (~/dev/flipfix) so both Django projects share a linting surface.
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DJ",     # flake8-django
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
    "DTZ",    # flake8-datetimez (naive datetime bugs)
    "SIM",    # flake8-simplify
    "PT",     # flake8-pytest-style
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
    "PGH",    # pygrep-hooks (blanket noqa/type-ignore)
    "ISC",    # flake8-implicit-str-concat
    "RUF100", # unused-noqa
    "RUF059", # unused-unpacked-variable
]
ignore = [
    "E501",  # Line too long — handled by formatter
    "DJ001", # Avoid nullable CharField — common Django pattern
    "S101",  # Use of assert — okay in tests (also per-file-ignored below)
    "S311",  # Use of random — not cryptographic in this app
    "PT019", # Underscore-prefix fixtures are the pytest idiom for side-effect-only fixtures
    "SIM118", # Django SessionStore has .keys() but non-dict iteration
]

[tool.ruff.lint.per-file-ignores]
"*/tests/*.py" = ["S101", "S106", "S603", "S607"]  # asserts, hardcoded test passwords, subprocess in tests
"conftest.py" = ["S101"]
"manage.py" = ["T20"]
"apps/*/management/commands/*.py" = ["T20", "S603", "S607", "B904"]  # print, subprocess, raise-from in commands
"scripts/*.py" = ["T201"]
"**/__init__.py" = ["F401"]  # re-exports from barrel modules are the whole point of __init__.py

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# basedpyright config lives at the repo root (../pyrightconfig.json) so the
# VS Code extension finds it from the workspace root. Do not duplicate here.
